tests/suites/3_stateful_sharing/01_sharing/01_0000_basic_sharing.result
OUTBOUND test_share test_database shared_tenant shared_tenant,to_tenant
INBOUND test_share test_database shared_tenant to_tenant
1
2
3
4
5
6
ERROR 1105 (HY000) at line 1: Code: 1025, Text = error: 
  --> SQL:1:15
  |
1 | SELECT * FROM shared_db.t1
  |               ^^^^^^^^^^^^ Unknown table 't1'

.
4
5
6
ERROR 1105 (HY000) at line 1: Code: 1025, Text = error: 
  --> SQL:1:15
  |
1 | SELECT * FROM shared_db.t2
  |               ^^^^^^^^^^^^ Unknown table 't2'

.
